# newton-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Constants.h  Exceptions.h  Graphics.cpp  Graphics.h  LICENSE  Main.cpp  PULL_REQUEST_TEMPLATE.md  Particle.cpp  Particle.h  README.md  Universe.cpp  Universe.h  Vector3.cpp  Vector3.h
